:arrow_up: Compatibility fixes for latest ucompiler

--- a/.ucompilerrc
+++ b/.ucompilerrc
@@ -1,6 +1,10 @@
 {
-  "plugins": ["babel"],
   "babel": {
     "presets": ["steelbrain"]
-  }
+  },
+  "rules": [{
+    "path": "src/*.js",
+    "output": "lib/{name}.js",
+    "plugins": ["babel"]
+  }]
 }
