:arrow_up: Make ucompilerrc compatible with latest

--- a/.ucompilerrc
+++ b/.ucompilerrc
@@ -4,7 +4,7 @@
   },
   "rules": [{
     "path": "src/*.js",
-    "output": "lib/{name}.js",
+    "outputPath": "lib/{name}.js",
     "plugins": ["babel"]
   }]
 }
