--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ucompiler-plugin-babel",
-  "version": "1.0.3",
+  "name": "ucompiler-plugin-newline",
+  "version": "1.0.4",
   "description": "Babel support for UCompiler",
   "main": "lib/main.js",
   "jsnext:main": "src/main.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/steelbrain/ucompiler-plugin-babel.git"
+    "url": "git+https://github.com/steelbrain/ucompiler-plugin-newline.git"
   },
   "keywords": [
     "ucompiler"
@@ -20,10 +20,7 @@
   "author": "steelbrain",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/steelbrain/ucompiler-plugin-babel/issues"
+    "url": "https://github.com/steelbrain/ucompiler-plugin-newline/issues"
   },
-  "homepage": "https://github.com/steelbrain/ucompiler-plugin-babel#readme",
-  "dependencies": {
-    "babel-core": "^6.2.1"
-  }
+  "homepage": "https://github.com/steelbrain/ucompiler-plugin-newline#readme"
 }
