:new: Add uglify-js as a dependency

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/steelbrain/ucompiler-plugin-uglify/issues"
   },
-  "homepage": "https://github.com/steelbrain/ucompiler-plugin-uglify#readme"
+  "homepage": "https://github.com/steelbrain/ucompiler-plugin-uglify#readme",
+  "dependencies": {
+    "uglify-js": "^2.6.1"
+  }
 }
